[project]
name = "ham10000-skin-lesion-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "gradio>=6.15.2",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "python-multipart>=0.0.30",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn[standard]>=0.48.0",
    "xgboost>=3.2.0",
]
